--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@
 /test_data/source/CMakeSettings.json
 /test_data/source/CMakeLists.txt
 /test_data/source/CMakePresets.json
+
+# User
+CMakeLists.txt.user
