--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ add_executable(nsbuild
  "src/nsbuildcmds.cpp" 
  "src/nsmedia.cpp" 
  "src/nsenums.cpp"  
- "src/nspreset.cpp"  )
+ "src/nspreset.cpp"   "src/nsheader_map.cpp" "include/nsheader_map.h")
 
  add_custom_command(TARGET nsbuild POST_BUILD 
   COMMAND ${CMAKE_COMMAND} -E copy_if_different  
