--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -20,12 +20,21 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+
+    - name: Install lcov & gcc
+      run:  |
+            sudo apt update
+            sudo apt-get install -y lcov gcc-13 g++-13
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} 
+      run: |
+            cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+            cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-    - name: Build
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      
+      shell: bash
+      env:
+        CC: gcc-13
+        CXX: g++-13
+
