Use .bat for easier handling of things

--- a/utils/tasks.vs.json
+++ b/utils/tasks.vs.json
@@ -32,7 +32,7 @@
       "type": "launch",
       "command": "${env.COMSPEC}",
       "args": [
-        "vcvarsall.bat && python build.py"
+        "build.bat"
       ]
     }
   ]
