Add to install.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,5 +121,6 @@ install (FILES
   "${CMAKE_CURRENT_LIST_DIR}/data/TopoHeaderMapEnd.html"
   "${CMAKE_CURRENT_LIST_DIR}/data/d3-dag.iife.min.js"
   "${CMAKE_CURRENT_LIST_DIR}/data/d3.v6.min.js"
+  "${CMAKE_CURRENT_LIST_DIR}/data/Enums.schema.json"
 
   DESTINATION ./)
